--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,11 @@
-<h1> Productos </h1>
-<u>
-    {% for agregar in lista_de_agregar %}
-        <li>{{ agregar }}</li>
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1> Productos </h1>
+    {%for agregar in lista_de_agregar %}
+        <div class = "post-entry">
+        <h2><a href = "">{{agregar.titulo}}</a></h2>
+        <p>{{agregar.text}}</p>
+        </div>
     {% endfor %}
-</u>
+{% endblock content %}}
